--- a/conversions/templates/conversions/conversion_detail.html
+++ b/conversions/templates/conversions/conversion_detail.html
@@ -40,7 +40,7 @@
                         <h4 class="lead mb-0 text-left text-black font-weight-bold">£{{ conversion.price }}</h4>
                         <p class="mt-3 text-black">{{ conversion.vehicle_description }}</p>
                         <a class="btn border-black rounded-2 text-black">Contact Seller</a>
-                        <a class="ml-2 btn border-black rounded-2 text-black">Save to Profile <i class="ml-1 fa fa-plus-circle"></i></a>
+                        <a href="{% url 'save_listing' conversion.id %}" class="ml-2 btn border-black rounded-2 text-black">Save to Profile <i class="ml-1 fa fa-plus-circle"></i></a>
                     </div>
                 </div>
             </div>
