--- a/conversions/templates/conversions/conversion_detail.html
+++ b/conversions/templates/conversions/conversion_detail.html
@@ -12,6 +12,7 @@
 {% block content %}
 <div class="overlay"></div>
     <div class="container-fluid">
+
         <div class="row">
             <div class="col offset-lg-2 mt-4 mb-4">
                 <a class="text-white" href="{% url 'conversions' %}">
@@ -19,157 +20,190 @@
                 </a>
             </div>
         </div>
-        <div class="row">
-            <div class="col-12 col-md-6 col-lg-5 col-xl-4 offset-xl-2 offset-lg-1 d-flex justify-content-center col-border-col-1">
-                <div class="p-2 image-container d-flex justify-content-center my-5">
-                    {% if conversion.main_image %}
-                        <a id="conversion-main-image" href="{{ conversion.main_image.url }}" target="_blank">
-                            <img class="card-img img-fluid" src="{{ conversion.main_image.url }}" alt="{{ conversion.name }}">
-                        </a>
-                    {% else %}
-                        <a href="">
-                            <img class="card-img img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ conversion.name }}">
-                        </a>
-                    {% endif %}
-                </div>
-            </div>
-            <div class="bg-white col-12 col-md-6 col-lg-5 col-xl-4 col-border-col-2 d-flex justify-content-center top-bottom-large-border">
-                <div class="p-2 d-flex align-items-center product-details-container mb-5 mt-md-5">
-                    <div class="inner-container">
-                        <h2 class="mb-0 text-black">{{ conversion.name }}</h2>
-                        <h4 class="lead mb-0 text-left text-black font-weight-bold">£{{ conversion.price }}</h4>
-                        <p class="mt-3 text-black">{{ conversion.vehicle_description }}</p>
-                        <a class="btn border-black rounded-2 text-black">Contact Seller</a>
-                        <a href="{% url 'save_listing' conversion.id conversion.unique_ref %}" class="ml-2 btn border-black rounded-2 text-black">Save to Profile <i class="ml-1 fa fa-plus-circle"></i></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row mt-5 mb-5">
-            <div class="col-12 col-md-6 col-lg-5 col-xl-4 offset-lg-1 offset-xl-2 col-border-col-1 bg-white d-flex justify-content-center top-bottom-large-border">
-                <div class="p-2 d-flex align-items-center product-details-container">
-                    <p class="mt-3 text-black">{{ conversion.conversion_description }}</p>
-                </div>
-            </div>
-            <div class="col-12 col-md-6 col-lg-5 col-xl-4 col-border-col-2 d-flex align-items-center">
-                <div class="row w-100">
-                    <div class="col-6">
-                        <div class="p-2 product-details-container mb-5 mt-md-5">
-                            {% for item in electrics %}
-                                <p class="mt-3 text-white larger-font"><i class="fas fa-check-circle mr-2"></i>{{ item }}</p>
-                            {% endfor %}
+
+        {% if not conversion.is_active %}
+            <!-- Check if user is author of listing or admin, if True render listing contents -->
+            {% if request.user.is_superuser or request.user.username == conversion.user.user.username %}
+                <!-- Main Conversion information -->
+                <div class="row">
+                    <div class="col-12 col-md-6 col-lg-5 col-xl-4 offset-xl-2 offset-lg-1 d-flex justify-content-center col-border-col-1">
+                        <div class="p-2 image-container d-flex justify-content-center my-5">
+                            {% if conversion.main_image %}
+                                <a id="conversion-main-image" href="{{ conversion.main_image.url }}" target="_blank">
+                                    <img class="card-img img-fluid" src="{{ conversion.main_image.url }}" alt="{{ conversion.name }}">
+                                </a>
+                            {% else %}
+                                <a href="">
+                                    <img class="card-img img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ conversion.name }}">
+                                </a>
+                            {% endif %}
                         </div>
                     </div>
-                    <div class="col-6">
-                        <p class="mt-3 text-white">Max Weight - {{ conversion.max_weight }}</p>
+                    <div class="bg-white col-12 col-md-6 col-lg-5 col-xl-4 col-border-col-2 d-flex justify-content-center top-bottom-large-border">
+                        <div class="p-2 d-flex align-items-center product-details-container mb-5 mt-md-5">
+                            <div class="inner-container">
+                                <h2 class="mb-0 text-black">{{ conversion.name }}</h2>
+                                <h4 class="lead mb-0 text-left text-black font-weight-bold">£{{ conversion.price }}</h4>
+                                <p class="mt-3 text-black">{{ conversion.vehicle_description }}</p>
+                                <a class="btn border-black rounded-2 text-black">Contact Seller</a>
+                                <a href="{% url 'save_listing' conversion.id conversion.unique_ref %}" class="ml-2 btn border-black rounded-2 text-black">Save to Profile <i class="ml-1 fa fa-plus-circle"></i></a>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>  
-        </div>
-
-        <!-- Image Gallery Grid MD and above only -->
-
-        <div class="row mb-5">
-            <div class="col-12 col-lg-8 offset-lg-2 d-none d-md-block">
-                <section>
-                    <h1 class="text-white mb-3">Image Gallery</h1>
-                    {% if image_list %}
-                    <div class="gallery">
-                        {% for image in image_list|slice:"0:6" %}
-                                <figure class="gallery__item gallery__item--{{ forloop.counter }}">
-                                    <a href="{{ image.image.url }}" target="_blank">
-                                        <img src="{{ image.image.url }}" class="gallery__img" alt="Image 1">
-                                    </a>
-                                </figure>
-                        {% endfor %}
+                <div class="row mt-5 mb-5">
+                    <div class="col-12 col-md-6 col-lg-5 col-xl-4 offset-lg-1 offset-xl-2 col-border-col-1 bg-white d-flex justify-content-center top-bottom-large-border">
+                        <div class="p-2 d-flex align-items-center product-details-container">
+                            <p class="mt-3 text-black">{{ conversion.conversion_description }}</p>
+                        </div>
                     </div>
-                    {% endif %}
-                </section>
-            </div>
-        </div>
+                    <div class="col-12 col-md-6 col-lg-5 col-xl-4 col-border-col-2 d-flex align-items-center">
+                        <div class="row w-100">
+                            <div class="col-6">
+                                <div class="p-2 product-details-container mb-5 mt-md-5">
+                                    {% for item in electrics %}
+                                        <p class="mt-3 text-white larger-font"><i class="fas fa-check-circle mr-2"></i>{{ item }}</p>
+                                    {% endfor %}
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <p class="mt-3 text-white">Max Weight - {{ conversion.max_weight }}</p>
+                            </div>
+                        </div>
+                    </div>  
+                </div>
 
-        <div class="row">
-            <div class="col-12 d-md-none">
-                <div class="image-container my-5">
-                    {% if image_list %}
-                        {% for image in image_list|slice:"0:6" %}
-                        <a href="{{ image.image.url }}" target="_blank">
-                            <img class="card-img-top img-fluid mb-4" src="{{ image.image.url }}" alt="imagelist present">
-                        </a>
-                        {% endfor %}
-                    {% else %}
-                        <a href="#">
-                            <img class="card-img-top img-fluid mb-4" src="{{ MEDIA_URL }}noimage.png" alt="no image">
-                        </a>
-                    {% endif %}
+                <!-- Image Gallery Grid MD and above only -->
+                <div class="row mb-5">
+                    <div class="col-12 col-lg-8 offset-lg-2 d-none d-md-block">
+                        <section>
+                            <h1 class="text-white mb-3">Image Gallery</h1>
+                            {% if image_list %}
+                            <div class="gallery">
+                                {% for image in image_list|slice:"0:6" %}
+                                        <figure class="gallery__item gallery__item--{{ forloop.counter }}">
+                                            <a href="{{ image.image.url }}" target="_blank">
+                                                <img src="{{ image.image.url }}" class="gallery__img" alt="Image 1">
+                                            </a>
+                                        </figure>
+                                {% endfor %}
+                            </div>
+                            {% endif %}
+                        </section>
+                    </div>
                 </div>
-            </div>
-        </div>
 
+                <div class="row">
+                    <div class="col-12 d-md-none">
+                        <div class="image-container my-5">
+                            {% if image_list %}
+                                {% for image in image_list|slice:"0:6" %}
+                                <a href="{{ image.image.url }}" target="_blank">
+                                    <img class="card-img-top img-fluid mb-4" src="{{ image.image.url }}" alt="imagelist present">
+                                </a>
+                                {% endfor %}
+                            {% else %}
+                                <a href="#">
+                                    <img class="card-img-top img-fluid mb-4" src="{{ MEDIA_URL }}noimage.png" alt="no image">
+                                </a>
+                            {% endif %}
+                        </div>
+                    </div>
+                </div>
+            {% else %}
+            <div class="row">
+                <div class="col">
+                    <h2 class="text-center text-white">Sorry this conversion is not currently live. Please try another listing</h2>
+                </div>
+            </div>
+            {% endif %}
+        {% else %}
+            <!-- Main Conversion information -->
+            <div class="row">
+                <div class="col-12 col-md-6 col-lg-5 col-xl-4 offset-xl-2 offset-lg-1 d-flex justify-content-center col-border-col-1">
+                    <div class="p-2 image-container d-flex justify-content-center my-5">
+                        {% if conversion.main_image %}
+                            <a id="conversion-main-image" href="{{ conversion.main_image.url }}" target="_blank">
+                                <img class="card-img img-fluid" src="{{ conversion.main_image.url }}" alt="{{ conversion.name }}">
+                            </a>
+                        {% else %}
+                            <a href="">
+                                <img class="card-img img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ conversion.name }}">
+                            </a>
+                        {% endif %}
+                    </div>
+                </div>
+                <div class="bg-white col-12 col-md-6 col-lg-5 col-xl-4 col-border-col-2 d-flex justify-content-center top-bottom-large-border">
+                    <div class="p-2 d-flex align-items-center product-details-container mb-5 mt-md-5">
+                        <div class="inner-container">
+                            <h2 class="mb-0 text-black">{{ conversion.name }}</h2>
+                            <h4 class="lead mb-0 text-left text-black font-weight-bold">£{{ conversion.price }}</h4>
+                            <p class="mt-3 text-black">{{ conversion.vehicle_description }}</p>
+                            <a class="btn border-black rounded-2 text-black">Contact Seller</a>
+                            <a href="{% url 'save_listing' conversion.id conversion.unique_ref %}" class="ml-2 btn border-black rounded-2 text-black">Save to Profile <i class="ml-1 fa fa-plus-circle"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-5 mb-5">
+                <div class="col-12 col-md-6 col-lg-5 col-xl-4 offset-lg-1 offset-xl-2 col-border-col-1 bg-white d-flex justify-content-center top-bottom-large-border">
+                    <div class="p-2 d-flex align-items-center product-details-container">
+                        <p class="mt-3 text-black">{{ conversion.conversion_description }}</p>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-5 col-xl-4 col-border-col-2 d-flex align-items-center">
+                    <div class="row w-100">
+                        <div class="col-6">
+                            <div class="p-2 product-details-container mb-5 mt-md-5">
+                                {% for item in electrics %}
+                                    <p class="mt-3 text-white larger-font"><i class="fas fa-check-circle mr-2"></i>{{ item }}</p>
+                                {% endfor %}
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <p class="mt-3 text-white">Max Weight - {{ conversion.max_weight }}</p>
+                        </div>
+                    </div>
+                </div>  
+            </div>
 
-           
+            <!-- Image Gallery Grid MD and above only -->
+            <div class="row mb-5">
+                <div class="col-12 col-lg-8 offset-lg-2 d-none d-md-block">
+                    <section>
+                        <h1 class="text-white mb-3">Image Gallery</h1>
+                        {% if image_list %}
+                        <div class="gallery">
+                            {% for image in image_list|slice:"0:6" %}
+                                    <figure class="gallery__item gallery__item--{{ forloop.counter }}">
+                                        <a href="{{ image.image.url }}" target="_blank">
+                                            <img src="{{ image.image.url }}" class="gallery__img" alt="Image 1">
+                                        </a>
+                                    </figure>
+                            {% endfor %}
+                        </div>
+                        {% endif %}
+                    </section>
+                </div>
+            </div>
 
-            <!-- <div class="col-12 col-md-3 col-lg-2 offset-lg-2">
-                <div class="image-container my-5">
-                    {% if image_list %}
-                        {% for image in image_list|slice:"0:2" %}
-                        <a href="{{ image.image.url }}" target="_blank">
-                            <img class="card-img-top img-fluid mb-4" src="{{ image.image.url }}" alt="imagelist present">
-                        </a>
-                        {% endfor %}
-                    {% else %}
-                        <a href="">
-                            <img class="card-img-top img-fluid mb-4" src="{{ MEDIA_URL }}noimage.png" alt="no image">
-                        </a>
-                    {% endif %}
+            <div class="row">
+                <div class="col-12 d-md-none">
+                    <div class="image-container my-5">
+                        {% if image_list %}
+                            {% for image in image_list|slice:"0:6" %}
+                            <a href="{{ image.image.url }}" target="_blank">
+                                <img class="card-img-top img-fluid mb-4" src="{{ image.image.url }}" alt="imagelist present">
+                            </a>
+                            {% endfor %}
+                        {% else %}
+                            <a href="#">
+                                <img class="card-img-top img-fluid mb-4" src="{{ MEDIA_URL }}noimage.png" alt="no image">
+                            </a>
+                        {% endif %}
+                    </div>
                 </div>
             </div>
-            <div class="col-12 col-md-3 col-lg-2">
-                <div class="image-container my-5">
-                    {% if image_list %}
-                        {% for image in image_list|slice:"2:4" %}
-                        <a href="{{ image.image.url }}" target="_blank">
-                            <img class="card-img-top img-fluid mb-4" src="{{ image.image.url }}" alt="imagelist present">
-                        </a>
-                        {% endfor %}
-                    {% else %}
-                        <a href="">
-                            <img class="card-img-top img-fluid mb-4" src="{{ MEDIA_URL }}noimage.png" alt="no image">
-                        </a>
-                    {% endif %}
-                </div>
-            </div>
-            <div class="col-12 col-md-3 col-lg-2">
-                <div class="image-container my-5">
-                    {% if image_list %}
-                        {% for image in image_list|slice:"4:6" %}
-                        <a href="{{ image.image.url }}" target="_blank">
-                            <img class="card-img-top img-fluid mb-4" src="{{ image.image.url }}" alt="imagelist present">
-                        </a>
-                        {% endfor %}
-                    {% else %}
-                        <a href="">
-                            <img class="card-img-top img-fluid mb-4" src="{{ MEDIA_URL }}noimage.png" alt="no image">
-                        </a>
-                    {% endif %}
-                </div>
-            </div>
-            <div class="col-12 col-md-3 col-lg-2">
-                <div class="image-container my-5">
-                    {% if image_list %}
-                        {% for image in image_list|slice:"6:8" %}
-                        <a href="{{ image.image.url }}" target="_blank">
-                            <img class="card-img-top img-fluid mb-4" src="{{ image.image.url }}" alt="imagelist present">
-                        </a>
-                        {% endfor %}
-                    {% else %}
-                        <a href="">
-                            <img class="card-img-top img-fluid mb-4" src="{{ MEDIA_URL }}noimage.png" alt="no image">
-                        </a>
-                    {% endif %}
-                </div>
-            </div> -->
-            
-        </div>
+        {% endif %}
     </div>
 {% endblock %}
