--- a/conversions/templates/conversions/conversions.html
+++ b/conversions/templates/conversions/conversions.html
@@ -65,9 +65,39 @@
                             <div class="col-12 col-xl-4 {% if forloop.counter|divisibleby:2 %}order-lg-last{% endif %} d-flex align-items-center">
                                 <div class="mx-auto">
                                     {% if conversion.main_image %}
-                                    <a href="{% url 'conversion_detail' conversion.id %}">
-                                        <img class="img-fluid img-conversions-page" src="{{ conversion.main_image.url }}" alt="{{ conversion.listing_title }}">
-                                    </a>
+                                    
+                                    <!-- Carousel of first three conversion images -->
+                                    <div id="carousel{{ forloop.counter }}Indicators" class="carousel slide" data-ride="carousel">
+                                        <ol class="carousel-indicators">
+                                            <li data-target="#carousel{{ forloop.counter }}Indicators" data-slide-to="0" class="active"></li>
+                                            <li data-target="#carousel{{ forloop.counter }}Indicators" data-slide-to="1"></li>
+                                            <li data-target="#carousel{{ forloop.counter }}Indicators" data-slide-to="2"></li>
+                                        </ol>
+                                        <div class="carousel-inner">
+                                            <div class="carousel-item active">
+                                                <a href="{% url 'conversion_detail' conversion.id %}">
+                                                    <img class="img-fluid img-conversions-page" src="{{ conversion.main_image.url }}" alt="{{ conversion.listing_title }}">
+                                                </a>
+                                            </div>
+                                            {% for image in conversion.images.all %}
+                                                {% if forloop.counter < 3 %}
+                                                    <div class="carousel-item">
+                                                        <a href="{% url 'conversion_detail' conversion.id %}">
+                                                            <img class="img-fluid img-conversions-page" src="{{ image.image.url }}" alt="{{ conversion.listing_title }}">
+                                                        </a>
+                                                    </div>
+                                                {% endif %}
+                                            {% endfor %}
+                                        </div>
+                                        <a class="carousel-control-prev" href="#carousel{{ forloop.counter }}Indicators" role="button" data-slide="prev">
+                                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                            <span class="sr-only">Previous</span>
+                                        </a>
+                                        <a class="carousel-control-next" href="#carousel{{ forloop.counter }}Indicators" role="button" data-slide="next">
+                                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                            <span class="sr-only">Next</span>
+                                        </a>
+                                        </div>
                                     {% else %}
                                     <a href="{% url 'conversion_detail' conversion.id %}">
                                         <img class="img-fluid img-conversions-page" src="{{ MEDIA_URL }}noimage.png" alt="{{ conversion.listing_title }}">
